# sandboxtest

./: .gitignore  README.md  agents.py  docker-compose.yml  llm_agent.py  lob.py  simulation.py
frontend/: Dockerfile  package.json
frontend/src/app/: layout.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/charts/: MultiAssetChart.tsx  PriceChart.tsx
frontend/src/components/controls/: ShockInjector.tsx
frontend/src/hooks/: useMarketSocket.ts
frontend/src/types/: market.ts
proto/: market.proto
services/agent-orchestrator/: Dockerfile  agents_ddql.py  causal_engine.py  ddql_agent.py  event_impact_analyzer.py  matching_engine.py  orchestrator.py  proto_codec.py  run_event_analysis.py  svar_validation.py
services/agent-orchestrator/actors/: __init__.py  base_actor.py
services/agent-orchestrator/config/: settings.py
services/agent-orchestrator/math_engine/: __init__.py  quant_models.py
services/agent-orchestrator/memory/: __init__.py  episodic_buffer.py  semantic_memory.py  state_store.py
services/agent-orchestrator/validation/: svar_validator.py
services/api-gateway/: Dockerfile
services/api-gateway/src/: main.py
services/lob-engine/: CMakeLists.txt  Dockerfile
services/lob-engine/include/: order.h  orderbook.h
services/lob-engine/proto/: market.proto
services/lob-engine/src/: main.cpp  orderbook.cpp
services/lob-engine/tests/: bench_orderbook.cpp
tests/: test_matching_engine.py  test_proto_contract.py
